# zyuzyu-bot

./: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
bot/: handlers.py  parser.py
